--- a/ui/app/index2.html
+++ b/ui/app/index2.html
@@ -13,10 +13,12 @@
 
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/bootstrap.css">
-        <link rel="stylesheet" href="styles/home.css">
+      <link rel="stylesheet" href="styles/product.css">
+      <link rel="stylesheet" href="styles/results.css">
+      <link rel="stylesheet" href="styles/home.css">
       <link rel="stylesheet" href="styles/font-awesome-4.0.3/css/font-awesome.css">
       <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-      <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+      <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'>
 
       <!-- endbuild -->
 </head>
@@ -33,41 +35,36 @@
     <header class="social-header">
         <div class="container">
             <div class="pull-right">
-            <div class="pull-left">
-                <!-- social buttons -->
-                <ul>
-                    <li><a href="#">A propos</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
+                <div class="pull-left">
+                    <!-- social buttons -->
+                    <ul style="text-align:center" ng-controller="SocialHeaderCtrl">
+                        <li style="margin-right:30px;margin-top:5px;"><a href="#">A propos</a></li>
+                        <li style="margin-right:30px;margin-top:5px;"><a href="#">Contact</a></li>
+                        <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                        <li class="googleplus"><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                        <li class="search-form" ng-click="isBoxHidden = !isBoxHidden">
+                            <i class="fa fa-search"></i>
+                        </li>
+                        <li><input class="box" type=text placeholder="Rechercher..." style="padding-left:5px;" ng-hide="isBoxHidden"/></li>
+                    </ul>
+                </div>
             </div>
-            <div class="pull-left">
-                <ul>
-                    <li class="googleplus"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                    <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li id="search-form">
-                        <form action="#" method="get">
-                            <input type="text" class="search-text-box">
-                        </form>
-                    </li>
-                </ul>
-            </div>
-        </div>
         </div>
     </header>
 
-    <nav class="navbar navbar-static-top" role="navigation">
+    <nav class="navbar navbar-static-top head" role="navigation">
         <div class="container">
             <div class="navbar-header">
                 <!-- logo -->
                 <a class="navbar-brand" href="#"><img src="../images/logo.png"/></a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <button class="nxc-btn navbar-btn" style="float:right; margin-top:33px">S'inscrire</button>
                 <ul class="nav pull-right navbar-nav">
                     <li><a href="#">Accueil</a></li>
                     <li><a href="#">Echanger</a></li>
                     <li><a href="#">Connexion</a></li>
-                    <li><button class="nxc-btn navbar-btn">S'inscrire</button></li>
                 </ul>
             </div>
         </div>
@@ -77,9 +74,42 @@
     <div class="main-container" ng-view=""></div>
 
     <!-- FOOTER -->
+    <nav class="navbar navbar-static-top foot" role="navigation">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3">
+                    <a class="navbar-brand" href="#"><img src="../images/logo.png"/></a>
+                </div>
+                <div class="col-lg-4" style="padding-top:50px">
+                    <p style="font-size:12px;">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+                </div>
+                <div class="col-lg-2"  style="padding-top:40px">
+                    <h4 class="footer-link-title">Le groupe</h4>
+                    <ul class="footer-links">
+                        <li><a href="#">A propos</a></li>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Contacts</a></li>
+                        <li><a href="#">Mentions légales</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-2"  style="padding-top:40px">
+                    <h4 class="footer-link-title">Communauté</h4>
+                    <ul class="footer-links">
+                        <li><a href="#">Liens utiles</a></li>
+                        <li><a href="#">Support</a></li>
+                        <li><a href="#">RSS</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-1">
+                    <img src="../images/arrow-top.png"/>
+                </div>
+            </div>
+        </div>    </nav>
     <footer>
         <div class="container">
-            <p class="pull-right"><a href="#">Back to top</a></p>
+            <p class="pull-right">
+                <a href="#">Back to top</a>
+            </p>
             <p>&copy; 2013 NewExchange.</p>
         </div>
     </footer>
@@ -119,6 +149,9 @@
         <script src="bower_components/angular-cookies/angular-cookies.js"></script>
         <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
         <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+        <script src="bower_components/angular-route/angular-route.js"></script>
+        <script src="bower_components/angular-animate/angular-animate.js"></script>
+        <script src="bower_components/ng-file-upload/angular-file-upload.min.js"></script>
         <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -129,8 +162,12 @@
         <script src="scripts/controllers/results.js"></script>
         <script src="scripts/controllers/product.js"></script>
         <script src="scripts/controllers/topmenu.js"></script>
+        <script src="scripts/controllers/socialHeader.js"></script>
+        <script src="scripts/controllers/addProduct.js"></script>
 
         <script src="scripts/services/mainservice.js"></script>
+        <script src="scripts/services/repositoryservice.js"></script>
         <!-- endbuild -->
+
 </body>
 </html>
