--- a/ui/app/index.html
+++ b/ui/app/index.html
@@ -13,9 +13,14 @@
 
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/bootstrap.css">
-        <link rel="stylesheet" href="styles/main.css">
-      <link rel="stylesheet" href="styles/carousel.css">
-        <!-- endbuild -->
+      <link rel="stylesheet" href="styles/product.css">
+      <link rel="stylesheet" href="styles/results.css">
+      <link rel="stylesheet" href="styles/home.css">
+      <link rel="stylesheet" href="styles/font-awesome-4.0.3/css/font-awesome.css">
+      <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+      <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'>
+
+      <!-- endbuild -->
 </head>
   <body ng-app="nxc">
     <!--[if lt IE 7]>
@@ -27,39 +32,41 @@
       <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
 
-    <nav class="navbar" role="navigation">
-        <div class="container" ng-controller="IndexMenuCtrl">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <img src="../images/logo.png" height="110px"/>
+    <header class="social-header">
+        <div class="container">
+            <div class="pull-right">
+                <div class="pull-left">
+                    <!-- social buttons -->
+                    <ul style="text-align:center" ng-controller="SocialHeaderCtrl">
+                        <li style="margin-right:30px;margin-top:5px;"><a href="#">A propos</a></li>
+                        <li style="margin-right:30px;margin-top:5px;"><a href="#">Contact</a></li>
+                        <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                        <li class="googleplus"><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                        <li class="search-form" ng-click="isBoxHidden = !isBoxHidden">
+                            <i class="fa fa-search"></i>
+                        </li>
+                        <li><input class="box" type=text placeholder="Rechercher..." style="padding-left:5px;" ng-hide="isBoxHidden"/></li>
+                    </ul>
+                </div>
             </div>
+        </div>
+    </header>
 
-            <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <span ng-hide="isLogged">
-                        <a href="#" ng-click="isEditForm='true'" ng-hide="isEditForm">Identification</a>
-                        <div ng-click="isEditForm='false'" ng-show="isEditForm">
-                            <form action="" ng-submit="login();">
-                                <input />
-                                <input />
-                                <button>Login</button>
-                                <a href="#">S'inscrire</a>
-                            </form>
-                        </div>
-                    </span>
-                    <a href="#" ng-show="isLogged">MDR</a>
-                </li>
-                <li>
-                    <a href="#">Qui sommes-nous ?</a>
-                </li>
-                <li>
-                    <a href="#">Aide</a>
-                </li>
-            </ul>
+    <nav class="navbar navbar-static-top head" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <!-- logo -->
+                <a class="navbar-brand" href="#"><img src="../images/logo.png"/></a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <button class="nxc-btn navbar-btn" style="float:right; margin-top:33px">S'inscrire</button>
+                <ul class="nav pull-right navbar-nav">
+                    <li><a href="#">Accueil</a></li>
+                    <li><a href="#">Echanger</a></li>
+                    <li><a href="#">Connexion</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
 
@@ -67,12 +74,45 @@
     <div class="main-container" ng-view=""></div>
 
     <!-- FOOTER -->
-    <div class="container grey">
-        <footer>
-            <p class="pull-right"><a href="#">Back to top</a></p>
-            <p>&copy; 2013 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-        </footer>
-    </div>
+    <nav class="navbar navbar-static-top foot" role="navigation">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3">
+                    <a class="navbar-brand" href="#"><img src="../images/logo.png"/></a>
+                </div>
+                <div class="col-lg-4" style="padding-top:50px">
+                    <p style="font-size:12px;">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+                </div>
+                <div class="col-lg-2"  style="padding-top:40px">
+                    <h4 class="footer-link-title">Le groupe</h4>
+                    <ul class="footer-links">
+                        <li><a href="#">A propos</a></li>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Contacts</a></li>
+                        <li><a href="#">Mentions légales</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-2"  style="padding-top:40px">
+                    <h4 class="footer-link-title">Communauté</h4>
+                    <ul class="footer-links">
+                        <li><a href="#">Liens utiles</a></li>
+                        <li><a href="#">Support</a></li>
+                        <li><a href="#">RSS</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-1">
+                    <img src="../images/arrow-top.png"/>
+                </div>
+            </div>
+        </div>    </nav>
+    <footer>
+        <div class="container">
+            <p class="pull-right">
+                <a href="#">Back to top</a>
+            </p>
+            <p>&copy; 2013 NewExchange.</p>
+        </div>
+    </footer>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
@@ -109,6 +149,9 @@
         <script src="bower_components/angular-cookies/angular-cookies.js"></script>
         <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
         <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+        <script src="bower_components/angular-route/angular-route.js"></script>
+        <script src="bower_components/angular-animate/angular-animate.js"></script>
+        <script src="bower_components/ng-file-upload/angular-file-upload.min.js"></script>
         <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -119,8 +162,12 @@
         <script src="scripts/controllers/results.js"></script>
         <script src="scripts/controllers/product.js"></script>
         <script src="scripts/controllers/topmenu.js"></script>
+        <script src="scripts/controllers/socialHeader.js"></script>
+        <script src="scripts/controllers/addProduct.js"></script>
 
         <script src="scripts/services/mainservice.js"></script>
+        <script src="scripts/services/repositoryservice.js"></script>
         <!-- endbuild -->
+
 </body>
 </html>
