--- a/ui/app/index.html
+++ b/ui/app/index.html
@@ -19,7 +19,6 @@
       <link rel="stylesheet" href="styles/font-awesome-4.0.3/css/font-awesome.css">
       <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
       <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'>
-
       <!-- endbuild -->
 </head>
   <body ng-app="nxc">
@@ -152,21 +151,22 @@
         <script src="bower_components/angular-route/angular-route.js"></script>
         <script src="bower_components/angular-animate/angular-animate.js"></script>
         <script src="bower_components/ng-file-upload/angular-file-upload.min.js"></script>
+        <script src="bower_components/holderjs/holder.js"></script>
+        <script src="js_third_party/jquery.roundabout.js"></script>
         <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
 
-        <script src="scripts/controllers/login.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/results.js"></script>
-        <script src="scripts/controllers/product.js"></script>
-        <script src="scripts/controllers/topmenu.js"></script>
-        <script src="scripts/controllers/socialHeader.js"></script>
-        <script src="scripts/controllers/addProduct.js"></script>
+    <script src="scripts/controllers/main.js"></script>
+    <!--<script src="scripts/controllers/results.js"></script>-->
+        <!--<script src="scripts/controllers/product.js"></script>-->
+        <!--<script src="scripts/controllers/topmenu.js"></script>-->
+    <script src="scripts/controllers/socialHeader.js"></script>
+    <!--<script src="scripts/controllers/addProduct.js"></script>-->
 
-        <script src="scripts/services/mainservice.js"></script>
-        <script src="scripts/services/repositoryservice.js"></script>
+        <!--<script src="scripts/services/mainservice.js"></script>-->
+        <!--<script src="scripts/services/repositoryservice.js"></script>-->
         <!-- endbuild -->
 
 </body>
